internal/kgateway/translator/gateway/testutils/outputs/backendtlspolicy/tls-san.yaml
Clusters:
- connectTimeout: 5s
  dnsLookupFamily: V4_PREFERRED
  loadAssignment:
    clusterName: backend_default_backend1_0
    endpoints:
    - lbEndpoints:
      - endpoint:
          address:
            socketAddress:
              address: example.com
              portValue: 8080
          healthCheckConfig:
            hostname: example.com
          hostname: example.com
  metadata: {}
  name: backend_default_backend1_0
  transportSocket:
    name: envoy.transport_sockets.tls
    typedConfig:
      '@type': type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
      commonTlsContext:
        tlsParams: {}
        validationContext:
          matchTypedSubjectAltNames:
          - matcher:
              exact: example-san.com
            sanType: DNS
          - matcher:
              exact: spifee://example-san.com
            sanType: URI
          trustedCa:
            inlineString: |
              -----BEGIN CERTIFICATE-----
              MIIC1jCCAb4CCQCJczLyBBZ1GTANBgkqhkiG9w0BAQsFADAtMRUwEwYDVQQKDAxl
[...]
              SxODgqhtaPnOxQ==
              -----END CERTIFICATE-----
      sni: example.com
  type: STRICT_DNS
- connectTimeout: 5s
  dnsLookupFamily: V4_PREFERRED
  loadAssignment:
    clusterName: backend_default_backend2_0
    endpoints:
    - lbEndpoints:
      - endpoint:
          address:
            socketAddress:
              address: example2.com
              portValue: 8080
          healthCheckConfig:
            hostname: example2.com
          hostname: example2.com
  metadata: {}
  name: backend_default_backend2_0
  transportSocket:
    name: envoy.transport_sockets.tls
    typedConfig:
      '@type': type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
      commonTlsContext:
        combinedValidationContext:
          defaultValidationContext:
            matchTypedSubjectAltNames:
            - matcher:
                exact: example2-san.com
              sanType: DNS
            - matcher:
                exact: spifee://example2-san.com
              sanType: URI
          validationContextSdsSecretConfig:
            name: SYSTEM_CA_CERT
      sni: example2.com
  type: STRICT_DNS
Listeners:
- address:
    socketAddress:
      address: '::'
      ipv4Compat: true
      portValue: 8080
  filterChains:
  - filters:
    - name: envoy.filters.network.http_connection_manager
      typedConfig:
        '@type': type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
        httpFilters:
        - name: envoy.filters.http.router
          typedConfig:
            '@type': type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
        mergeSlashes: true
        normalizePath: true
        rds:
          configSource:
            ads: {}
            resourceApiVersion: V3
          routeConfigName: listener~80
        statPrefix: http
        useRemoteAddress: true
    name: listener~80
  name: listener~80
Routes:
- ignorePortInHostMatching: true
  name: listener~80
  virtualHosts:
  - domains:
    - '*'
    name: listener~80~*
    routes:
    - match:
        prefix: /
      name: listener~80~*-route-0-httproute-example-route-default-0-0-matcher-0
      route:
        cluster: backend_default_backend1_0
        clusterNotFoundResponseCode: INTERNAL_SERVER_ERROR
      typedPerFilterConfig:
        ai.extproc.kgateway.io:
          '@type': type.googleapis.com/envoy.extensions.filters.http.ext_proc.v3.ExtProcPerRoute
          disabled: true
